# wirestripper

./: Cargo.toml  README.md
sample_pcap/: full.pcap  record1.pcap
src/: lib.rs  main.rs
